--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
+eframe = "0.31.1"
 egui = "0.26"
 feed-rs = "1.3"
 log = "0.4"
@@ -16,6 +17,7 @@ reqwest = { version = "0.11", features = ["json"] }
 rusqlite = { version = "0.29", features = ["bundled", "backup", "blob", "chrono", "functions", "trace", "uuid", "serde_json", "url"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tao = "0.32.8"
 tokio = { version = "1.36", features = ["full"] }
 url = { version = "2.5", features = ["serde"] }
 uuid = { version = "1.7", features = ["v4", "serde"] }
