--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ anyhow = "1.0"
 async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 eframe = "0.31.1"
-egui = "0.26"
+egui = "0.31.1"
+env_logger = "0.11.8"
 feed-rs = "1.3"
 log = "0.4"
 open = "5.0"
